force-app/main/default/objects/Opportunity/fields/ULBC_Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Fund_Type__c</fullName>
    <label>Fund Type</label>
    <type>Picklist</type>
    <description>Whether the gift is unrestricted (charity discretion) or restricted to a named fund. Required on every Opportunity. Phase 2C.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Unrestricted</fullName><default>true</default><label>Unrestricted</label></value>
            <value><fullName>Restricted</fullName><default>false</default><label>Restricted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>