force-app/main/default/objects/Opportunity/fields/ULBC_Gift_Aid_Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Claimed_Date__c</fullName>
    <label>Gift Aid Claimed Date</label>
    <type>Date</type>
    <description>Date on which Gift Aid was successfully claimed from HMRC for this donation. Blank until claimed. Phase 2C.</description>
</CustomField>