force-app/main/default/objects/Opportunity/fields/ULBC_Gift_Aid_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Aid_Eligible__c</fullName>
    <label>Gift Aid Eligible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when Gift Aid can be claimed on this specific donation. Donor must have a valid declaration on their Contact record. Set manually. Phase 2C.</description>
</CustomField>