force-app/main/default/objects/Opportunity/fields/ULBC_Gift_Source__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Source__c</fullName>
    <label>Gift Source</label>
    <type>Picklist</type>
    <description>Acquisition channel that generated this specific gift. Mirrors Contact Acquisition Channel values for consistent reporting. Phase 2C.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Alumni</fullName><default>false</default><label>Alumni</label></value>
            <value><fullName>Athlete</fullName><default>false</default><label>Athlete</label></value>
            <value><fullName>Event</fullName><default>false</default><label>Event</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Digital</fullName><default>false</default><label>Digital</label></value>
            <value><fullName>Direct Mail</fullName><default>false</default><label>Direct Mail</label></value>
            <value><fullName>Telephone</fullName><default>false</default><label>Telephone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>