force-app/main/default/objects/Opportunity/fields/ULBC_Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Type__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <description>Nature of the donation. Required on every Opportunity. Phase 2C.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>One-off</fullName><default>true</default><label>One-off</label></value>
            <value><fullName>Regular</fullName><default>false</default><label>Regular</label></value>
            <value><fullName>Pledge</fullName><default>false</default><label>Pledge</label></value>
            <value><fullName>Legacy-Pledge</fullName><default>false</default><label>Legacy-Pledge</label></value>
            <value><fullName>Legacy-Gift</fullName><default>false</default><label>Legacy-Gift</label></value>
            <value><fullName>Gift-in-Kind</fullName><default>false</default><label>Gift-in-Kind</label></value>
            <value><fullName>In Memory</fullName><default>false</default><label>In Memory</label></value>
            <value><fullName>Tribute Fund</fullName><default>false</default><label>Tribute Fund</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>