force-app/main/default/objects/Opportunity/fields/ULBC_Gift_Year__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Gift_Year__c</fullName>
    <label>Gift Year</label>
    <type>Text</type>
    <formula>TEXT(YEAR(CloseDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>