force-app/main/default/objects/Opportunity/fields/ULBC_Stripe_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Stripe_Payment_ID__c</fullName>
    <label>Stripe Payment ID</label>
    <type>Text</type>
    <length>255</length>
    <description>Placeholder for Stripe payment_intent or charge ID. Not populated until Stripe integration (v2). Decision 1.7. Phase 2C.</description>
</CustomField>